--- a/styles/Works.module.scss
+++ b/styles/Works.module.scss
@@ -21,8 +21,6 @@
     flex: 0 0 33.333%;
     @include media(lg) {
       padding: 30px;
-    }
-    @include media(md) {
       max-width: 50%;
       flex: 0 0 50%;
     }
@@ -37,8 +35,10 @@
     }
   }
   &__photo_link {
-    display: flex;
+    display: block;
     border: 4px solid $yellow;
+    overflow: hidden;
+    height: 300px;
     -webkit-box-shadow: 0px 0px 22px 18px rgba(241, 225, 0, 0.3);
     -moz-box-shadow: 0px 0px 22px 18px rgba(241, 225, 0, 0.3);
     box-shadow: 0px 0px 22px 18px rgb(241, 225, 0, 0.3);
@@ -47,13 +47,15 @@
       -moz-box-shadow: 0px 0px 22px 10px rgba(241, 225, 0, 0.3);
       box-shadow: 0px 0px 22px 10px rgb(241, 225, 0, 0.3);
     }
-    img {
-      transition: all 0.5s;
-    }
     &:hover img {
-      overflow: hidden;
       transform: scale(1.2) rotate(10deg);
     }
+  }
+  &__photo_img {
+    transition: all 0.5s;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   &__insta_wrapper {
     text-align: center;
