--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -64,6 +64,7 @@
 .hero_feedback {
   max-width: 1140px;
   width: 100%;
+  min-height: 217px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
