--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@
 html,
 body {
   height: 100%;
-  font-family: Myriad Pro, sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 16px;
   color: $white;
   font-weight: 400;
