--- a/styles/Contacts.module.scss
+++ b/styles/Contacts.module.scss
@@ -21,12 +21,14 @@
     font-size: 16px;
     font-weight: 600;
     color: $white;
+    font-family: 'Myriad Pro', sans-serif;
     &::placeholder {
       font-size: 14px;
       font-weight: 600;
       color: $gray-light;
       text-transform: uppercase;
       letter-spacing: 2px;
+      font-family: 'Myriad Pro', sans-serif;
     }
   }
   &__input {
